Fixing regressions: In order to update the expat buffer position correctly do not block after processing a start element. b=119399, r=heikki, sr=jst. Update the expat buffer position if we're blocked after processing the end element. b=119727, r=heikki, sr=jst